fix menu on mobile

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -45,7 +45,7 @@
 
 #header.expanded nav {
   position: fixed;
-  top: 70px;
+  top: 150px;
   left: 0;
   right: 0;
   bottom: 70px !important;
